# GMP-featurizer

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.gpu  GPU-SETUP-SUMMARY.md  README.md  build.sh  docker-compose.gpu.yml  docker-compose.yml  requirements.txt
example/: QE-kjpaw.gpsp  config.json  run.py  run.sh  structure.cif
src/: atom.cpp  atom.hpp  atom.hxx  boost_pool.hpp  error.cpp  error.hpp  featurizer.cpp  featurizer.hpp  featurizer.hxx  fwd.hpp  geometry.cpp  geometry.hpp  geometry.hxx  input.cpp  input.hpp  input.hxx  main.cpp  math.cpp  math.hpp  math.hxx  mcsh.hpp  mcsh.hxx  mcsh_kernel.cpp  mcsh_kernel.hpp  mcsh_kernel.hxx  mcsh_simd.hpp  morton_codes.hpp  query.cpp  query.hpp  region_query.hpp  resources.hpp  simd.hpp  tree.cpp  tree.hpp  tree.hxx  types.hpp  util.hpp
src/common/: atom.cpp  atom.hpp  common_types.hpp  error.hpp  geometry.cpp  geometry.hpp  gmp_float.hpp  gpu_qualifiers.hpp  input.cpp  input.hpp  math.cpp  math.hpp  mcsh.cpp  mcsh.hpp  mcsh_kernel.cpp  mcsh_kernel.hpp  morton_codes.hpp  util.hpp
src/cpu/: cpu_featurizer.cpp  cpu_featurizer.hpp  featurizer.cpp  featurizer.hpp  mcsh.hpp  region_query.cpp  region_query.hpp  tree.cpp  tree.hpp
src/gpu/: cuda_featurizer.cu  cuda_featurizer.hpp  cuda_group_add.hpp  cuda_region_query.cu  cuda_region_query.hpp  cuda_thrust_ops.hpp  cuda_tree.cu  cuda_tree.hpp  cuda_util.hpp  gpu_featurizer.cu  gpu_featurizer.hpp
src/infra/: allocator.hpp  containers.hpp  memory_manager.cpp  memory_manager.hpp  pinned_memory_pool.cpp  pinned_memory_pool.hpp  resources.hpp  rmm_pool.cpp  rmm_pool.hpp  thread_pool.hpp
src/python/: gmp_featurizer.cpp
test/: atom.cpp  cif_test.cpp  cuda_kernels.cu  cuda_region_query_test.cu  cuda_tree_test.cu  geometry.cpp  gmp_cpu.cpp  gmp_gpu.cpp  input.cpp  input_test.json  math.cpp  mcsh_simd.cpp  morton_codes.cpp  query.cpp  region_query.cpp  resources.cpp  rmm_test.cpp  test-cuda.cu  tree.cpp  util.cpp  xsimd.cpp
test/test_files/: input_test.json  test.cif  test.gpsp
